testdata/baselines/reference/submodule/conformance/jsdocTemplateConstructorFunction.errors.txt
templateTagOnConstructorFunctions.js(3,18): error TS2304: Cannot find name 'U'.
templateTagOnConstructorFunctions.js(3,24): error TS2304: Cannot find name 'U'.


==== templateTagOnConstructorFunctions.js (2 errors) ====
    /**
     * @template U
     * @typedef {(u: U) => U} Id
                     ~
!!! error TS2304: Cannot find name 'U'.
                           ~
!!! error TS2304: Cannot find name 'U'.
     */
    /**
     * @param {T} t
     * @template T
     */
    function Zet(t) {
        /** @type {T} */
        this.u
        this.t = t
    }
    /**
     * @param {T} v
     * @param {Id<T>} id
     */
    Zet.prototype.add = function(v, id) {
        this.u = v || this.t
        return id(this.u)
    }
    var z = new Zet(1)
    z.t = 2
    z.u = false
    